--- a/mediverse-backend/big-data-research-hub-service/pom.xml
+++ b/mediverse-backend/big-data-research-hub-service/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-         http://maven.apache.org/xsd/maven-4.0.0.xsd">
+                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <!-- Parent POM -->
@@ -14,13 +14,13 @@
 
   <artifactId>big-data-research-hub-service</artifactId>
   <packaging>jar</packaging>
+  <name>big-data-research-hub-service</name>
 
   <properties>
     <java.version>17</java.version>
     <spring-boot.version>3.3.1</spring-boot.version>
-    <hive.version>3.1.2</hive.version>
-    <minio.version>8.5.3</minio.version>
     <spark.version>3.4.1</spark.version>
+    <minio.version>8.5.3</minio.version>
   </properties>
 
   <dependencies>
@@ -50,42 +50,16 @@
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
 
-    <!-- Hive JDBC (exclude old jdk.tools) -->
-    <dependency>
-      <groupId>org.apache.hive</groupId>
-      <artifactId>hive-jdbc</artifactId>
-      <version>${hive.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>jdk.tools</groupId>
-          <artifactId>jdk.tools</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-
-    <!-- Apache Spark (exclude old jdk.tools if pulled transitively) -->
+    <!-- Apache Spark Core & SQL -->
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.12</artifactId>
       <version>${spark.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>jdk.tools</groupId>
-          <artifactId>jdk.tools</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
-
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_2.12</artifactId>
       <version>${spark.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>jdk.tools</groupId>
-          <artifactId>jdk.tools</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
 
     <!-- MinIO -->
@@ -93,6 +67,32 @@
       <groupId>io.minio</groupId>
       <artifactId>minio</artifactId>
       <version>${minio.version}</version>
+    </dependency>
+
+    <!-- PostgreSQL -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+
+    <!-- JWT -->
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-api</artifactId>
+      <version>0.11.5</version>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-impl</artifactId>
+      <version>0.11.5</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-jackson</artifactId>
+      <version>0.11.5</version>
+      <scope>runtime</scope>
     </dependency>
 
     <!-- Testing -->
@@ -104,15 +104,25 @@
   </dependencies>
 
   <repositories>
-    <!-- Maven Central -->
     <repository>
-      <id>apache-repo</id>
+      <id>central</id>
       <url>https://repo.maven.apache.org/maven2</url>
     </repository>
   </repositories>
 
   <build>
     <plugins>
+      <!-- Compiler plugin for Java 17 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+        </configuration>
+      </plugin>
+
       <!-- Spring Boot plugin -->
       <plugin>
         <groupId>org.springframework.boot</groupId>
