--- a/mediverse-backend/gateway-service/src/main/resources/application.properties
+++ b/mediverse-backend/gateway-service/src/main/resources/application.properties
@@ -1,118 +1,116 @@
-spring.application.name=mediverse-gateway
-server.port=9090
+# ------------------- SERVER -------------------
+server.port=8080
+spring.application.name=gateway-service
 
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+# ------------------- ROUTES -------------------
+spring.cloud.gateway.routes[0].id=ai-doctor-co-pilot-service
+spring.cloud.gateway.routes[0].uri=http://localhost:8081
+spring.cloud.gateway.routes[0].predicates[0]=Path=/ai-doctor/**
 
-# Routes (example, replace with your service names and ports if not using Eureka)
-spring.cloud.gateway.routes[0].id=user-service
-spring.cloud.gateway.routes[0].uri=lb://user-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
+spring.cloud.gateway.routes[1].id=appointment-scheduling-service
+spring.cloud.gateway.routes[1].uri=http://localhost:8082
+spring.cloud.gateway.routes[1].predicates[0]=Path=/appointments/**
 
-spring.cloud.gateway.routes[1].id=auth-service
-spring.cloud.gateway.routes[1].uri=lb://auth-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/auth/**
+spring.cloud.gateway.routes[2].id=big-data-research-hub-service
+spring.cloud.gateway.routes[2].uri=http://localhost:8083
+spring.cloud.gateway.routes[2].predicates[0]=Path=/research/**
 
-spring.cloud.gateway.routes[2].id=profile-service
-spring.cloud.gateway.routes[2].uri=lb://profile-service
-spring.cloud.gateway.routes[2].predicates[0]=Path=/profiles/**
+spring.cloud.gateway.routes[3].id=billing-payments-service
+spring.cloud.gateway.routes[3].uri=http://localhost:8084
+spring.cloud.gateway.routes[3].predicates[0]=Path=/billing/**
 
-spring.cloud.gateway.routes[3].id=post-service
-spring.cloud.gateway.routes[3].uri=lb://post-service
-spring.cloud.gateway.routes[3].predicates[0]=Path=/posts/**
+spring.cloud.gateway.routes[4].id=blockchain-health-ledger-service
+spring.cloud.gateway.routes[4].uri=http://localhost:8085
+spring.cloud.gateway.routes[4].predicates[0]=Path=/ledger/**
 
-spring.cloud.gateway.routes[4].id=comment-service
-spring.cloud.gateway.routes[4].uri=lb://comment-service
-spring.cloud.gateway.routes[4].predicates[0]=Path=/comments/**
+spring.cloud.gateway.routes[5].id=community-support-groups-service
+spring.cloud.gateway.routes[5].uri=http://localhost:8086
+spring.cloud.gateway.routes[5].predicates[0]=Path=/community/**
 
-spring.cloud.gateway.routes[5].id=like-service
-spring.cloud.gateway.routes[5].uri=lb://like-service
-spring.cloud.gateway.routes[5].predicates[0]=Path=/likes/**
+spring.cloud.gateway.routes[6].id=compliance-audit-service
+spring.cloud.gateway.routes[6].uri=http://localhost:8087
+spring.cloud.gateway.routes[6].predicates[0]=Path=/compliance/**
 
-spring.cloud.gateway.routes[6].id=follower-service
-spring.cloud.gateway.routes[6].uri=lb://follower-service
-spring.cloud.gateway.routes[6].predicates[0]=Path=/followers/**
+spring.cloud.gateway.routes[7].id=critical-alert-service
+spring.cloud.gateway.routes[7].uri=http://localhost:8088
+spring.cloud.gateway.routes[7].predicates[0]=Path=/alerts/**
 
-spring.cloud.gateway.routes[7].id=notification-service
-spring.cloud.gateway.routes[7].uri=lb://notification-service
-spring.cloud.gateway.routes[7].predicates[0]=Path=/notifications/**
+spring.cloud.gateway.routes[8].id=doctor-profile-credentialing-service
+spring.cloud.gateway.routes[8].uri=http://localhost:8089
+spring.cloud.gateway.routes[8].predicates[0]=Path=/doctors/**
 
-spring.cloud.gateway.routes[8].id=messaging-service
-spring.cloud.gateway.routes[8].uri=lb://messaging-service
-spring.cloud.gateway.routes[8].predicates[0]=Path=/messages/**
+spring.cloud.gateway.routes[9].id=drug-research-clinical-trials-service
+spring.cloud.gateway.routes[9].uri=http://localhost:8090
+spring.cloud.gateway.routes[9].predicates[0]=Path=/trials/**
 
-spring.cloud.gateway.routes[9].id=search-service
-spring.cloud.gateway.routes[9].uri=lb://search-service
-spring.cloud.gateway.routes[9].predicates[0]=Path=/search/**
+spring.cloud.gateway.routes[10].id=e-prescription-service
+spring.cloud.gateway.routes[10].uri=http://localhost:8091
+spring.cloud.gateway.routes[10].predicates[0]=Path=/prescriptions/**
 
-spring.cloud.gateway.routes[10].id=analytics-service
-spring.cloud.gateway.routes[10].uri=lb://analytics-service
-spring.cloud.gateway.routes[10].predicates[0]=Path=/analytics/**
+spring.cloud.gateway.routes[11].id=ehr-service
+spring.cloud.gateway.routes[11].uri=http://localhost:8092
+spring.cloud.gateway.routes[11].predicates[0]=Path=/ehr/**
 
-spring.cloud.gateway.routes[11].id=trend-service
-spring.cloud.gateway.routes[11].uri=lb://trend-service
-spring.cloud.gateway.routes[11].predicates[0]=Path=/trends/**
+spring.cloud.gateway.routes[12].id=emergency-dispatch-service
+spring.cloud.gateway.routes[12].uri=http://localhost:8093
+spring.cloud.gateway.routes[12].predicates[0]=Path=/emergency/**
 
-spring.cloud.gateway.routes[12].id=content-moderation-service
-spring.cloud.gateway.routes[12].uri=lb://content-moderation-service
-spring.cloud.gateway.routes[12].predicates[0]=Path=/moderation/**
+spring.cloud.gateway.routes[13].id=epidemic-tracking-service
+spring.cloud.gateway.routes[13].uri=http://localhost:8094
+spring.cloud.gateway.routes[13].predicates[0]=Path=/epidemic/**
 
-spring.cloud.gateway.routes[13].id=ad-service
-spring.cloud.gateway.routes[13].uri=lb://ad-service
-spring.cloud.gateway.routes[13].predicates[0]=Path=/ads/**
+spring.cloud.gateway.routes[14].id=health-wellness-coaching-service
+spring.cloud.gateway.routes[14].uri=http://localhost:8095
+spring.cloud.gateway.routes[14].predicates[0]=Path=/coaching/**
 
-spring.cloud.gateway.routes[14].id=payment-service
-spring.cloud.gateway.routes[14].uri=lb://payment-service
-spring.cloud.gateway.routes[14].predicates[0]=Path=/payments/**
+spring.cloud.gateway.routes[15].id=healthcare-analytics-service
+spring.cloud.gateway.routes[15].uri=http://localhost:8096
+spring.cloud.gateway.routes[15].predicates[0]=Path=/analytics/**
 
-spring.cloud.gateway.routes[15].id=subscription-service
-spring.cloud.gateway.routes[15].uri=lb://subscription-service
-spring.cloud.gateway.routes[15].predicates[0]=Path=/subscriptions/**
+spring.cloud.gateway.routes[16].id=home-monitoring-service
+spring.cloud.gateway.routes[16].uri=http://localhost:8097
+spring.cloud.gateway.routes[16].predicates[0]=Path=/monitoring/**
 
-spring.cloud.gateway.routes[16].id=event-service
-spring.cloud.gateway.routes[16].uri=lb://event-service
-spring.cloud.gateway.routes[16].predicates[0]=Path=/events/**
+spring.cloud.gateway.routes[17].id=hospital-resource-management-service
+spring.cloud.gateway.routes[17].uri=http://localhost:8098
+spring.cloud.gateway.routes[17].predicates[0]=Path=/hospital/**
 
-spring.cloud.gateway.routes[17].id=group-service
-spring.cloud.gateway.routes[17].uri=lb://group-service
-spring.cloud.gateway.routes[17].predicates[0]=Path=/groups/**
+spring.cloud.gateway.routes[18].id=identity-access-management-service
+spring.cloud.gateway.routes[18].uri=http://localhost:8099
+spring.cloud.gateway.routes[18].predicates[0]=Path=/identity/**
 
-spring.cloud.gateway.routes[18].id=forum-service
-spring.cloud.gateway.routes[18].uri=lb://forum-service
-spring.cloud.gateway.routes[18].predicates[0]=Path=/forums/**
+spring.cloud.gateway.routes[19].id=insurance-claims-service
+spring.cloud.gateway.routes[19].uri=http://localhost:8100
+spring.cloud.gateway.routes[19].predicates[0]=Path=/insurance/**
 
-spring.cloud.gateway.routes[19].id=blog-service
-spring.cloud.gateway.routes[19].uri=lb://blog-service
-spring.cloud.gateway.routes[19].predicates[0]=Path=/blogs/**
+spring.cloud.gateway.routes[20].id=inventory-supply-chain-service
+spring.cloud.gateway.routes[20].uri=http://localhost:8101
+spring.cloud.gateway.routes[20].predicates[0]=Path=/inventory/**
 
-spring.cloud.gateway.routes[20].id=video-service
-spring.cloud.gateway.routes[20].uri=lb://video-service
-spring.cloud.gateway.routes[20].predicates[0]=Path=/videos/**
+spring.cloud.gateway.routes[21].id=lab-order-results-service
+spring.cloud.gateway.routes[21].uri=http://localhost:8102
+spring.cloud.gateway.routes[21].predicates[0]=Path=/lab/**
 
-spring.cloud.gateway.routes[21].id=story-service
-spring.cloud.gateway.routes[21].uri=lb://story-service
-spring.cloud.gateway.routes[21].predicates[0]=Path=/stories/**
+spring.cloud.gateway.routes[22].id=medical-imaging-service
+spring.cloud.gateway.routes[22].uri=http://localhost:8103
+spring.cloud.gateway.routes[22].predicates[0]=Path=/imaging/**
 
-spring.cloud.gateway.routes[22].id=marketplace-service
-spring.cloud.gateway.routes[22].uri=lb://marketplace-service
-spring.cloud.gateway.routes[22].predicates[0]=Path=/marketplace/**
+spring.cloud.gateway.routes[23].id=patient-digital-twin-service
+spring.cloud.gateway.routes[23].uri=http://localhost:8104
+spring.cloud.gateway.routes[23].predicates[0]=Path=/digital-twin/**
 
-spring.cloud.gateway.routes[23].id=job-service
-spring.cloud.gateway.routes[23].uri=lb://job-service
-spring.cloud.gateway.routes[23].predicates[0]=Path=/jobs/**
+spring.cloud.gateway.routes[24].id=patient-identity-profile-service
+spring.cloud.gateway.routes[24].uri=http://localhost:8105
+spring.cloud.gateway.routes[24].predicates[0]=Path=/patients/**
 
-spring.cloud.gateway.routes[24].id=learning-service
-spring.cloud.gateway.routes[24].uri=lb://learning-service
-spring.cloud.gateway.routes[24].predicates[0]=Path=/learning/**
+spring.cloud.gateway.routes[25].id=pharmacy-fulfillment-service
+spring.cloud.gateway.routes[25].uri=http://localhost:8106
+spring.cloud.gateway.routes[25].predicates[0]=Path=/pharmacy/**
 
-spring.cloud.gateway.routes[25].id=wellness-service
-spring.cloud.gateway.routes[25].uri=lb://wellness-service
-spring.cloud.gateway.routes[25].predicates[0]=Path=/wellness/**
+spring.cloud.gateway.routes[26].id=vaccination-service
+spring.cloud.gateway.routes[26].uri=http://localhost:8107
+spring.cloud.gateway.routes[26].predicates[0]=Path=/vaccination/**
 
-spring.cloud.gateway.routes[26].id=ai-assistant-service
-spring.cloud.gateway.routes[26].uri=lb://ai-assistant-service
-spring.cloud.gateway.routes[26].predicates[0]=Path=/ai/**
-
-spring.cloud.gateway.routes[27].id=integration-service
-spring.cloud.gateway.routes[27].uri=lb://integration-service
-spring.cloud.gateway.routes[27].predicates[0]=Path=/integrations/**
+spring.cloud.gateway.routes[27].id=virtual-consultation-service
+spring.cloud.gateway.routes[27].uri=http://localhost:8108
+spring.cloud.gateway.routes[27].predicates[0]=Path=/consultations/**
