--- a/mediverse-backend/ai-doctor-co-pilot-service/Dockerfile
+++ b/mediverse-backend/ai-doctor-co-pilot-service/Dockerfile
@@ -1,5 +1,16 @@
+# ------------------ Stage 1: Build (optional, local build recommended) ------------------
+# If you want Docker to build the JAR, uncomment below. Otherwise, build JAR locally.
+# FROM maven:3.9.3-eclipse-temurin-17 AS build
+# WORKDIR /app
+# COPY . .
+# RUN mvn clean package -DskipTests
+
+# ------------------ Stage 2: Runtime ------------------
 FROM eclipse-temurin:17-jdk-alpine
-VOLUME /tmp
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["sh","-c","java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"]
+WORKDIR /app
+
+# Copy the pre-built JAR from target folder
+COPY target/ai-doctor-co-pilot-service-1.0.0-SNAPSHOT.jar app.jar
+
+EXPOSE 8081
+ENTRYPOINT ["java", "-jar", "app.jar"]
