--- a/mediverse-backend/ai-doctor-co-pilot-service/src/main/resources/application.yml
+++ b/mediverse-backend/ai-doctor-co-pilot-service/src/main/resources/application.yml
@@ -1,21 +1,36 @@
 spring:
   application:
     name: ai_doctor_co_pilot_service
-  data:
-    mongodb:
-      uri: mongodb://mongo:27017/ai_doctor_co_pilot_service
+
   datasource:
     url: jdbc:postgresql://postgres:5432/ai_doctor_co_pilot_service
     username: postgres
     password: postgres
+    driver-class-name: org.postgresql.Driver
+    hikari:
+      initialization-fail-timeout: 60000
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
+  data:
+    mongodb:
+      uri: mongodb://mongo:27017/ai_doctor_co_pilot_service
+
   kafka:
     bootstrap-servers: kafka:9092
+
   rabbitmq:
     host: rabbitmq
     port: 5672
 
 server:
-  port: 0  # use random port; override when running locally
+  port: 8081
+
 management:
   endpoints:
     web:
