"Billing Payment Service Service up and running"

--- a/mediverse-backend/docker-compose.yml
+++ b/mediverse-backend/docker-compose.yml
@@ -115,6 +115,39 @@ services:
     networks:
       - mediaverse-net
 
+  # ------------------ Billing Payments Service ------------------
+  billing-payments-service:
+    build:
+      context: ./billing-payments-service
+      dockerfile: Dockerfile
+    container_name: billing_payments_service
+    ports:
+      - "8084:8084"
+    environment:
+      # PostgreSQL (transactions, invoices, etc.)
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/mediaverse
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+
+      # MongoDB (optional, for flexible schema like receipts, audit logs)
+      SPRING_DATA_MONGODB_URI: mongodb://mongo:27017/mediaverse
+
+      # Messaging
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING_RABBITMQ_PORT: 5672
+
+      # Service name
+      SPRING_APPLICATION_NAME: billing-payments-service
+    depends_on:
+      - postgres
+      - mongo
+      - kafka
+      - rabbitmq
+    networks:
+      - mediaverse-net
+
+
 # Add other services similarly
 
 networks:
