--- a/mediverse-backend/blockchain-health-ledger-service/pom.xml
+++ b/mediverse-backend/blockchain-health-ledger-service/pom.xml
@@ -19,6 +19,7 @@
   <properties>
     <java.version>17</java.version>
     <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
+    <spring-boot.version>3.2.4</spring-boot.version>
   </properties>
 
   <dependencies>
@@ -109,6 +110,17 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring-boot.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>com.mediVerse.healthcare.blockchainhealthledgerservice.BlockchainHealthLedgerServiceApplication</mainClass>
+        </configuration>
       </plugin>
     </plugins>
   </build>
